--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-<title>Test del curso</title>
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <title>Test del curso</title>
+  <link rel="stylesheet" type="text/css" href="css/estilos.css">
 
 </head>
+
 <body>
   <div class="calculadora">
     <form name="calculadora">
-            <h3>Calculadora <a href="#"></a></h3>
-            <!-- <p>vss</p> -->
-    <input  placeholder="Ingresar numero" type="textfield" name="ans" value="" id="lcd">
-  ype="button" class="arit" value="+" onClick="obtenerOperador('suma')">
-    <br>
-  <input type="button" value="4" onClick="mostrar(4)">
-    <input type="button" value="5" onClick="mostrar(5)">
-    <input type="button" value="6" onClick="mostrar(6)">
-    <input type="button" class="arit" value="-" onClick="obtenerOperador('resta')">
-    <br>
-  <input type="button" value="7" onClick="mostrar(7)">
-    <input type="button" value="8" onClick="mostrar(8)">
-    <input type="button" value="9" onClick="mostrar(9)">
-    <input type="button" class="arit" value="*" onClick="obtenerOperador('multiplicacion')">
- 
-</form>
-</div>	  
+      <h3>Calculadora <a href="#"></a></h3>
+      <!-- <p>vss</p> -->
+      <input placeholder="Ingresar numero" type="textfield" name="ans" value="" id="lcd">
+      ype="button" class="arit" value="+" onClick="obtenerOperador('suma')">
+      <br>
+      <input type="button" value="1" onClick="mostrar(1)">
+      <input type="button" value="2" onClick="mostrar(2)">
+      <input type="button" value="3" onClick="mostrar(3)">
+      <input type="button" class="arit" value="+" onClick="obtenerOperador('suma')">
+      <br>
+      <input type="button" value="4" onClick="mostrar(4)">
+      <input type="button" value="5" onClick="mostrar(5)">
+      <input type="button" value="6" onClick="mostrar(6)">
+      <input type="button" class="arit" value="-" onClick="obtenerOperador('resta')">
+      <br>
+      <input type="button" value="7" onClick="mostrar(7)">
+      <input type="button" value="8" onClick="mostrar(8)">
+      <input type="button" value="9" onClick="mostrar(9)">
+      <input type="button" class="arit" value="*" onClick="obtenerOperador('multiplicacion')">
+
+    </form>
+  </div>
 
 </body>
+
 </html>
