--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
     <input type="button" value="8" onClick="mostrar(8)">
     <input type="button" value="9" onClick="mostrar(9)">
     <input type="button" class="arit" value="*" onClick="obtenerOperador('multiplicacion')">
- 
+<input type="button" value="0" onClick="mostrar(0)">
+	    <input type="reset" class="clear" onClick="borrarPantalla" value="CE">
+	    <input type="button" class="arit" value="/" onClick="obtenerOperador('division')">
+      <input type="button" class="arit" value="=" onClick="calcular()">
+      <br>
+<input type="button" value="0" onClick="mostrar(0)">
+	    <input type="reset" class="clear" onClick="borrarPantalla" value="CE">
+	    <input type="button" class="arit" value="/" onClick="obtenerOperador('division')">
+	    <input type="button" class="arit" value="=" onClick="calcular()">
+      
 </form>
 </div>	  
 
